--- a/GUI_V_2/GUI_V_2/ProjectDataBaseI.csproj
+++ b/GUI_V_2/GUI_V_2/ProjectDataBaseI.csproj
@@ -44,12 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="coneccion.cs" />
+    <Compile Include="conexion.cs" />
     <Compile Include="ControladorAereo.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ControladorAereo.Designer.cs">
       <DependentUpon>ControladorAereo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AvionDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AvionDelete.Designer.cs">
+      <DependentUpon>AvionDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AvionFind.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AvionFind.Designer.cs">
+      <DependentUpon>AvionFind.cs</DependentUpon>
     </Compile>
     <Compile Include="Master.cs">
       <SubType>Form</SubType>
@@ -63,18 +75,54 @@
     <Compile Include="MenuAvion.Designer.cs">
       <DependentUpon>MenuAvion.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuControladorAereo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuControladorAereo.Designer.cs">
+      <DependentUpon>MenuControladorAereo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuModelos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuModelos.Designer.cs">
+      <DependentUpon>MenuModelos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuPruebas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuPruebas.Designer.cs">
+      <DependentUpon>MenuPruebas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuTecnico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuTecnico.Designer.cs">
+      <DependentUpon>MenuTecnico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Modelo.cs" />
+    <Compile Include="ModeloDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModeloDelete.Designer.cs">
+      <DependentUpon>ModeloDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModeloFind.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModeloFind.Designer.cs">
+      <DependentUpon>ModeloFind.cs</DependentUpon>
+    </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Principal.Designer.cs">
       <DependentUpon>Principal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modelos.cs">
+    <Compile Include="ModeloAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Modelos.Designer.cs">
-      <DependentUpon>Modelos.cs</DependentUpon>
+    <Compile Include="ModeloAdd.Designer.cs">
+      <DependentUpon>ModeloAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="InicioResumen.cs">
       <SubType>Form</SubType>
@@ -82,19 +130,31 @@
     <Compile Include="InicioResumen.Designer.cs">
       <DependentUpon>InicioResumen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Aviones.cs">
+    <Compile Include="AvionAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Aviones.Designer.cs">
-      <DependentUpon>Aviones.cs</DependentUpon>
+    <Compile Include="AvionAdd.Designer.cs">
+      <DependentUpon>AvionAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pruebas.cs">
+    <Compile Include="PruebaDelete.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pruebas.Designer.cs">
-      <DependentUpon>Pruebas.cs</DependentUpon>
+    <Compile Include="PruebaDelete.Designer.cs">
+      <DependentUpon>PruebaDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PruebasAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PruebasAdd.Designer.cs">
+      <DependentUpon>PruebasAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PruebasFind.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PruebasFind.Designer.cs">
+      <DependentUpon>PruebasFind.cs</DependentUpon>
     </Compile>
     <Compile Include="Sqlconnection.cs" />
     <Compile Include="Tecnico.cs">
@@ -106,23 +166,47 @@
     <EmbeddedResource Include="ControladorAereo.resx">
       <DependentUpon>ControladorAereo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AvionDelete.resx">
+      <DependentUpon>AvionDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AvionFind.resx">
+      <DependentUpon>AvionFind.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Master.resx">
       <DependentUpon>Master.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuAvion.resx">
       <DependentUpon>MenuAvion.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MenuControladorAereo.resx">
+      <DependentUpon>MenuControladorAereo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuModelos.resx">
+      <DependentUpon>MenuModelos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuPruebas.resx">
+      <DependentUpon>MenuPruebas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuTecnico.resx">
+      <DependentUpon>MenuTecnico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModeloDelete.resx">
+      <DependentUpon>ModeloDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModeloFind.resx">
+      <DependentUpon>ModeloFind.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Modelos.resx">
-      <DependentUpon>Modelos.cs</DependentUpon>
+    <EmbeddedResource Include="ModeloAdd.resx">
+      <DependentUpon>ModeloAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InicioResumen.resx">
       <DependentUpon>InicioResumen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Aviones.resx">
-      <DependentUpon>Aviones.cs</DependentUpon>
+    <EmbeddedResource Include="AvionAdd.resx">
+      <DependentUpon>AvionAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,8 +217,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Pruebas.resx">
-      <DependentUpon>Pruebas.cs</DependentUpon>
+    <EmbeddedResource Include="PruebaDelete.resx">
+      <DependentUpon>PruebaDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PruebasAdd.resx">
+      <DependentUpon>PruebasAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PruebasFind.resx">
+      <DependentUpon>PruebasFind.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tecnico.resx">
       <DependentUpon>Tecnico.cs</DependentUpon>
