--- a/GUI_V_2/GUI_V_2/ProjectDataBaseI.csproj
+++ b/GUI_V_2/GUI_V_2/ProjectDataBaseI.csproj
@@ -63,6 +63,18 @@
     <Compile Include="AvionFind.Designer.cs">
       <DependentUpon>AvionFind.cs</DependentUpon>
     </Compile>
+    <Compile Include="ControladorAereoDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ControladorAereoDelete.Designer.cs">
+      <DependentUpon>ControladorAereoDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ControladorAereoFind.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ControladorAereoFind.Designer.cs">
+      <DependentUpon>ControladorAereoFind.cs</DependentUpon>
+    </Compile>
     <Compile Include="Master.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +175,18 @@
     <Compile Include="TecnicoAdd.Designer.cs">
       <DependentUpon>TecnicoAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="TecnicoDelete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TecnicoDelete.Designer.cs">
+      <DependentUpon>TecnicoDelete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TecnicoFind.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TecnicoFind.Designer.cs">
+      <DependentUpon>TecnicoFind.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ControladorAereoAdd.resx">
       <DependentUpon>ControladorAereoAdd.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +195,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AvionFind.resx">
       <DependentUpon>AvionFind.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ControladorAereoDelete.resx">
+      <DependentUpon>ControladorAereoDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ControladorAereoFind.resx">
+      <DependentUpon>ControladorAereoFind.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Master.resx">
       <DependentUpon>Master.cs</DependentUpon>
@@ -228,6 +258,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TecnicoAdd.resx">
       <DependentUpon>TecnicoAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TecnicoDelete.resx">
+      <DependentUpon>TecnicoDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TecnicoFind.resx">
+      <DependentUpon>TecnicoFind.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
